tests/semantic/pass/sizeof_main_call.c
int main(void) {
  return sizeof(main());
}
