tests/semantic/fail/lord_voidemort.c
int main(void) {
  void lord;
  return 0;
}
